--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "optimistdigital/nova-simple-repeatable",
+  "name": "softlinecy/nova-simple-repeatable",
   "description": "A Laravel Nova simple repeatable rows field.",
   "keywords": [
     "laravel",
@@ -12,9 +12,9 @@
   ],
   "license": "MIT",
   "require": {
-    "php": ">=7.2.0",
+    "php": "^8.2",
     "laravel/nova": "^3.0",
-    "optimistdigital/nova-translations-loader": "^3.0.0"
+    "softlinecy/nova-translations-loader": "^3.1.4"
   },
   "autoload": {
     "psr-4": {
